<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:background="@drawable/popup_border">

    <TextView
        android:id="@+id/custom_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_time_title"
        android:textColor="@color/text"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/unit_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_time_unit_label"
        android:textColor="@color/text"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/custom_time_title"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/unit_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/time_units"
        app:layout_constraintTop_toBottomOf="@id/unit_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/value_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_time_label"
        android:textColor="@color/text"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/unit_spinner"
        app:layout_constraintStart_toStartOf="parent" />

    <NumberPicker
        android:id="@+id/days_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:theme="@style/NumberPickerStyle"
        app:layout_constraintTop_toBottomOf="@id/value_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/text"
        android:background="@drawable/button_rounded"
        app:backgroundTint="@null"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/days_picker" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/cancel_button_rounded"
        app:backgroundTint="@null"
        android:text="@string/cancel"
        android:textColor="@color/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/days_picker" />

</androidx.constraintlayout.widget.ConstraintLayout>
