<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:background="@drawable/popup_border">

    <TextView
        android:id="@+id/textView"
        android:layout_width="196dp"
        android:layout_height="18dp"
        android:layout_marginTop="4dp"
        android:text="@string/first_warning"
        android:textColor="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/proceed_first_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/text"
        android:background="@drawable/button_rounded"
        app:backgroundTint="@null"
        android:text="@string/proceed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_first_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/cancel_button_rounded"
        app:backgroundTint="@null"
        android:text="@string/cancel"
        android:textColor="@color/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>
