<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <!-- Top Bar: Locale (left), Info (center), QR (right) -->

    <ImageButton
        android:id="@+id/infoButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/info" />

    <ImageButton
        android:id="@+id/qrButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/background"
        app:srcCompat="@drawable/qrcode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="8dp" />

    <!-- Copy button INSIDE the ID field -->
    <TextView
        android:id="@+id/idLabel"
        android:layout_width="148dp"
        android:layout_height="22dp"
        android:layout_marginTop="32dp"
        android:text="@string/your_id"
        android:textAlignment="center"
        android:textColor="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoButton" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/showIdField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/popup_border"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:gravity="center"
        android:minHeight="44dp"
        android:paddingEnd="40dp"
        android:textColor="@color/text"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idLabel" />

    <ImageButton
        android:id="@+id/copyButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:backgroundTint="@android:color/transparent"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/copy"
        app:layout_constraintEnd_toEndOf="@id/showIdField"
        app:layout_constraintTop_toTopOf="@id/showIdField"
        app:layout_constraintBottom_toBottomOf="@id/showIdField"
        android:layout_marginEnd="12dp" />

    <TextView
        android:id="@+id/idDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unable_to_show_key"
        android:textColor="@color/text"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/showIdField"
        app:layout_constraintEnd_toEndOf="@+id/showIdField"
        app:layout_constraintStart_toStartOf="@+id/showIdField"
        app:layout_constraintTop_toTopOf="@+id/showIdField" />


    <!--Wipe time limit dropdown-->

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/wipe_time_options"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:background="@drawable/spinner_dropdown"
        android:minHeight="44dp"
        android:paddingStart="0dp"
        android:paddingEnd="40dp"
        android:popupBackground="@drawable/spinner_dropdown"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/showIdField"
        app:layout_constraintStart_toStartOf="@+id/showIdField"
        app:layout_constraintTop_toBottomOf="@+id/showIdField"/>


    <TextView
        android:id="@+id/wipe_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:text="@string/wipe_time_no_unlock"
        app:layout_constraintBottom_toBottomOf="@+id/wipe_time_options"
        app:layout_constraintEnd_toEndOf="@+id/wipe_time_options"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/wipe_time_options"
        app:layout_constraintTop_toBottomOf="@+id/idLabel"
        app:layout_constraintVertical_bias="0.686" />
</androidx.constraintlayout.widget.ConstraintLayout>
